--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+		<h1 id="myH1"></h1>
+
+		<input id="userInfo" type="text">
+
+		<button onclick="getInfo()" type= "button">Click here</button>
+
+		<h1 id="myNewH1"></h1>
+		<h1 id="heading1"></h1>
+		<h2 id="heading2"></h2>
+		<h3 id="heading3"></h3>	
+
 
 		<!-- jquery library -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
